# smot

./: .gitignore  CMakeLists.txt  README.md
headers/: Graphics.h  Screencapture.h  Smot.h
src/: Graphics.cpp  Screencapture.cpp  Smot.cpp  graphics.cpp
src/headers/: Smot.h  graphics.h
